--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ services:
   honeygotchi:
     build: .
     container_name: honeygotchi
+    restart: unless-stopped
     ports:
       - "2222:2222"  # SSH honeypot
       - "9090:9090"  # Prometheus metrics
@@ -14,6 +15,7 @@ services:
   prometheus:
     image: prom/prometheus:latest
     container_name: prometheus
+    restart: unless-stopped
     ports:
       - "9091:9090"
     volumes:
@@ -30,6 +32,7 @@ services:
   grafana:
     image: grafana/grafana:latest
     container_name: grafana
+    restart: unless-stopped
     ports:
       - "3000:3000"
     environment:
@@ -44,6 +47,7 @@ services:
   loki:
     image: grafana/loki:latest
     container_name: loki
+    restart: unless-stopped
     ports:
       - "3100:3100"
     volumes:
@@ -56,6 +60,7 @@ services:
   promtail:
     image: grafana/promtail:latest
     container_name: promtail
+    restart: unless-stopped
     volumes:
       - ./logs:/var/log/honeygotchi
       - ./promtail-config.yml:/etc/promtail/config.yml
